# cicd-tutorial

./: .gitignore  Dockerfile  package.json  pyproject.toml  requirements.txt
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
config/: searches.yaml.example
core/jobpilot_core/: __init__.py  __main__.py  cli.py  linkedin.py  paths.py  storage.py
core/tests/: test_cover_letter_export.py  test_dotenv_load.py  test_enrich.py  test_linkedin.py  test_opening_placeholders.py  test_profile_flat_apply.py  test_searches_config.py  test_storage.py  test_tailor_profile.py
scripts/: repair-macos-venv-pth.sh
stages/apply/jobpilot_apply/: __init__.py  __main__.py  apply.py  claude_form_map.py  playwright_apply.py  profile_flat.py
stages/discovery/jobpilot/: __init__.py  __main__.py  config.py  discover.py
stages/enrich/jobpilot_enrich/: __init__.py  __main__.py  apply_dom.py  enrich.py
stages/tailor/jobpilot_tailor/: __init__.py  __main__.py  cover_letter_export.py  llm_cover_letter.py  profile_load.py  tailor.py
